package Matricula;

public class Professor extends Usuario {

    public Professor(int id, String nome, String senha) {
        super(id, nome, senha);
    }
}